--- a/sass/layout/_styles.scss
+++ b/sass/layout/_styles.scss
@@ -14,6 +14,7 @@
     grid-gap: var(--gutter);
     grid-template-columns: repeat(auto-fit, minmax(15ch, 25ch));
     justify-content: safe center;
+    padding: 0;
   }
 
   li {
